--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,22 +19,22 @@ jobs:
 
       - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: 21
+          distribution: ${{ vars.JAVA_VENDOR }}
+          java-version: ${{ vars.GRADLE_JAVA_VERSION }}
           java-package: jre
           cache: 'gradle'
       - run: printf "org.gradle.java.home=%s" "$JAVA_HOME" > gradle.properties
 
       - uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: 22
+          distribution: ${{ vars.JAVA_VENDOR }}
+          java-version: ${{ vars.JAVA_VERSION }}
           check-latest: true
       - run: printf "\norg.gradle.java.installations.paths=%s" "$JAVA_HOME" >> gradle.properties
       - run: java --version
 
       - name: Gradle Check
-        run: ./gradlew check -PtargetJava=22 --stacktrace
+        run: ./gradlew check -PtargetJava=${{ vars.JAVA_VERSION }} --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
