--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,19 +18,27 @@ jobs:
       - uses: gradle/actions/wrapper-validation@v3
 
       - uses: actions/setup-java@v4
+        if: ${{ vars.GRADLE_JAVA_VERSION != vars.JAVA_VERSION }}
         with:
           distribution: ${{ vars.JAVA_VENDOR }}
           java-version: ${{ vars.GRADLE_JAVA_VERSION }}
           java-package: jre
           cache: 'gradle'
+
       - run: printf "org.gradle.java.home=%s" "$JAVA_HOME" > gradle.properties
+        if: ${{ vars.GRADLE_JAVA_VERSION != vars.JAVA_VERSION }}
 
       - uses: actions/setup-java@v4
         with:
           distribution: ${{ vars.JAVA_VENDOR }}
           java-version: ${{ vars.JAVA_VERSION }}
           check-latest: true
+
+      - run: printf "org.gradle.java.home=%s" "$JAVA_HOME" > gradle.properties
+        if: ${{ vars.GRADLE_JAVA_VERSION == vars.JAVA_VERSION }}
+
       - run: printf "\norg.gradle.java.installations.paths=%s" "$JAVA_HOME" >> gradle.properties
+
       - run: java --version
 
       - name: Gradle Check
@@ -39,6 +47,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Github Packages
-        run: ./gradlew -PtargetJava=22 publish
+        run: ./gradlew -PtargetJava=${{ vars.JAVA_VERSION }} publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
