--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,6 @@ def getAppVersion = { ->
 ext {
   VERSION = getAppVersion()
   VCS_URL = 'https://github.com/sava-software/solana-web2'
-
-  bouncycastleMinor = 'jdk18on'
-  bouncycastlePatch = '1.78.1' // https://www.bouncycastle.org/latest_releases.html#LATEST
-
-  jsoniter = '2.11.0'
-
-  sava = '1.4.2'
 }
 
 apply plugin: 'java-library'
@@ -49,10 +42,10 @@ plugins.withType(JavaPlugin).configureEach {
 }
 
 dependencies {
-  implementation "systems.comodal:json-iterator:$jsoniter"
-
-  implementation "software.sava:sava-core:$sava"
-  implementation "software.sava:sava-rpc:$sava"
+  implementation libs.bouncycastle
+  implementation libs.json.iterator
+  implementation libs.sava.core
+  implementation libs.sava.rpc
 }
 
 repositories {
@@ -81,9 +74,8 @@ configurations.configureEach {
 }
 
 dependencies {
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:+'
-  testImplementation 'org.junit.jupiter:junit-jupiter-params:+'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:+'
+  testImplementation libs.junit.jupiter
+  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
