clean up build.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           printf "\norg.gradle.java.installations.paths=%s" "$JAVA_HOME" >> gradle.properties
           java --version
-          ./gradlew -PtargetJava=${{ vars.JAVA_VERSION }} check --stacktrace --no-daemon
+          ./gradlew -PjavaVersion=${{ vars.JAVA_VERSION }} check --stacktrace --no-daemon
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
