--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           printf "\norg.gradle.java.installations.paths=%s" "$JAVA_HOME" >> gradle.properties
           java --version
-          ./gradlew --stacktrace --no-daemon -PjavaVersion=${{ vars.JAVA_VERSION }} -Pversion=${{ github.ref_name }}} check publish
+          ./gradlew --stacktrace --no-daemon -PjavaVersion=${{ vars.JAVA_VERSION }} -Pversion=${{ github.ref_name }} check publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
