--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ project.group = 'software.sava'
 project.version = "$VERSION"
 
 final JLV = JavaLanguageVersion.of(project.findProperty('javaVersion') as Integer ?: 23)
+final GPR_USER = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+final GPR_TOKEN = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
 
 plugins.withType(JavaPlugin).configureEach {
   java {
@@ -34,15 +36,15 @@ repositories {
   maven {
     url = "https://maven.pkg.github.com/comodal/json-iterator"
     credentials {
-      username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-      password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+      username = GPR_USER
+      password = GPR_TOKEN
     }
   }
   maven {
     url = "https://maven.pkg.github.com/sava-software/sava"
     credentials {
-      username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-      password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+      username = GPR_USER
+      password = GPR_TOKEN
     }
   }
   mavenCentral()
@@ -62,13 +64,13 @@ tasks.register('sourcesJar', Jar) {
   archiveClassifier.set('sources')
 }
 
-tasks.withType(Javadoc).configureEach {
-  options.addStringOption('Xdoclint:none', '-quiet')
-}
-
 java {
   withJavadocJar()
   withSourcesJar()
+}
+
+tasks.withType(Javadoc).configureEach {
+  options.addStringOption('Xdoclint:none', '-quiet')
 }
 
 publishing {
