--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins.withType(JavaPlugin).configureEach {
 
 dependencies {
   implementation libs.bouncycastle
-  implementation libs.json.iterator
+  implementation libs.sava.json.iterator
   implementation libs.sava.core
   implementation libs.sava.rpc
 
