--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .gradle
+.kotlin
 build/
 gradle-app.setting
 .gradletasknamecache
@@ -20,6 +21,5 @@ hs_err_pid*
 *.secret
 .DS_Store
 out/
-gradle.properties
 ignore
 market_cache.json
